[gd_scene load_steps=3 format=3 uid="uid://clxj5p7bm6r6g"]

[ext_resource type="Theme" uid="uid://css40iplnp7ux" path="res://assets/themes/defaultTheme.tres" id="1_exq2q"]
[ext_resource type="Script" path="res://assets/scripts/minigames/waterwolf/Pipe.gd" id="1_ok17c"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_ok17c")

[node name="LowerPipe" type="ColorRect" parent="."]
offset_top = 16.0
offset_right = 8.0
offset_bottom = 272.0
color = Color(0.964706, 0.458824, 0.478431, 1)

[node name="LowerLabel" type="Label" parent="LowerPipe"]
layout_mode = 0
offset_left = 8.0
offset_right = 264.0
offset_bottom = 11.0
rotation = 1.5708
theme = ExtResource("1_exq2q")
text = "https://thelongesturlIcanimagine.co.nt"

[node name="UpperPipe" type="ColorRect" parent="."]
offset_top = -272.0
offset_right = 8.0
offset_bottom = -16.0
color = Color(0.964706, 0.458824, 0.478431, 1)

[node name="UpperLabel" type="Label" parent="UpperPipe"]
layout_mode = 0
offset_left = 8.0
offset_right = 264.0
offset_bottom = 11.0
rotation = 1.5708
theme = ExtResource("1_exq2q")
text = "https://thelongesturlIcanimagine.co.nt"
horizontal_alignment = 2
